--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@
 #  - redis
 
 
-language: php
-php:
-  - 5.3
+#language: php
+#php:
+#  - 5.3
 #install:
 #  - bundle install --path=vendor/bundle
 #cache: bundler
