--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ after_success:
 deploy:
 - provider: s3
   bucket: plussign
-  local-dir: /var/tmp/release/
+  local-dir: /var/tmp/release
   upload-dir: latest
   # skip_cleanup: true
   region: $AWS_DEFAULT_REGION
