--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ deploy:
 #  on: &1
 #    branch: develop
 - provider: script
+  skip_cleanup: true
   script: deploy/deploy.sh
   on: &1
     branch: develop
