--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ deploy:
 #  on: &1
 #    branch: develop
  provider: script
-#  skip_cleanup: true
+ skip_cleanup: true
  script: deploy/deploy.sh
  on:
    branch: develop
