--- a/deploy/dev/3-6_cloudformation_instance_parameters.template
+++ b/deploy/dev/3-6_cloudformation_instance_parameters.template
@@ -52,7 +52,7 @@
           }
         },
         "Tags": [ {
-            "Key": "deployed"
+            "Key": "deployed",
             "Value": "development-false"
         } ]
       }
