--- a/deploy/dev/3-6_cloudformation_instance_parameters.template
+++ b/deploy/dev/3-6_cloudformation_instance_parameters.template
@@ -17,7 +17,7 @@
       "Type": "AWS::EC2::Instance",
       "Properties": {
         "Monitoring":"true",
-        "ImageId":"ami-c99dbeae"
+        "ImageId":"ami-c99dbeae",
         #"ImageId":"ami-c99dbeae",
         #"BlockDeviceMappings":[
         #  {
