--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ sudo: required
 #  - 5.3
 script:
 #  - phpunit -c app.php
-  - echo "test"
+#  - echo "test"
   
 #install:
 #  - bundle install --path=vendor/bundle
