--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,8 @@ deploy:
  skip_cleanup: true
  script: sh deploy/deploy.sh
  on:
-   branch: /^dev.*$
+#   branch: /^dev.*$
+   condition: $TRAVIS_BRANCH =~ /^dev.*$
 
 after_deploy:
 - echo 'end deploy'
