--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,8 @@ deploy:
  script: sh deploy/deploy.sh
  on:
 #   branch: /^dev.*$
-   condition: "$TRAVIS_BRANCH =~ /^dev.*$"
+#   condition: "$TRAVIS_BRANCH =~ /^dev.*$"
+   condition: $TRAVIS_BRANCH = develop
 
 after_deploy:
 - echo 'end deploy'
