--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,10 @@ after_success:
 - sudo apt-get install jq
 - mkdir -p /vat/tmp/release
 - tar -zcf /var/tmp/release/kawabata.tar.gz --exclude ".git" ./
+- if[ "$TRAVIS_BRANCH" =~ /^dev.*$ ]; then
+   deploy_branch=$TRAVIS_BRANCH
+  fi
+
 
 deploy:
 #- provider: s3
