--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ after_success:
 - sudo apt-get install jq
 - mkdir -p /vat/tmp/release
 - tar -zcf /var/tmp/release/kawabata.tar.gz --exclude ".git" ./
-- if [ "$TRAVIS_BRANCH" =~ /^dev.*$ ]; then
+- if [[ "$TRAVIS_BRANCH" =~ /^dev.*$ ]]; then
    DEV_DEPLOY_BRANCH=$TRAVIS_BRANCH
   fi
 - echo $DEV_DEPLOY_BRANCH
