--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,7 @@ branches:
     - topic-add-deployflow
 
 after_success:
-- sudo pip install awscli
-- sudo apt-get install jq
-- mkdir -p /vat/tmp/release
-- tar -zcf /var/tmp/release/kawabata.tar.gz --exclude ".git" ./
-- if [ "$TRAVIS_BRANCH" =~ /^dev.*$/ ]; then DEV_DEPLOY_BRANCH="$TRAVIS_BRANCH" fi
-- echo $DEV_DEPLOY_BRANCH
+- deploy/after_success.sh
 
 deploy:
 - provider: script
