--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ branches:
     - topic-add-deployflow
 
 after_success:
-- sh deploy/after_success.sh
+- source deploy/after_success.sh
 
 deploy:
 - provider: script
