--- a/deploy/dev/3-6_cloudformation_instance_parameters.template
+++ b/deploy/dev/3-6_cloudformation_instance_parameters.template
@@ -47,7 +47,10 @@
                 "curl \"https://bootstrap.pypa.io/get-pip.py\" -o \"get-pip.py\"\n",
                 "sudo python get-pip.py\n",
                 "sudo pip install awscli\n",
-                "sudo yum install -y jq\n"
+                "sudo yum install -y jq\n",
+                "aws s3 cp s3://aws-codedeploy-ap-northeast-1/latest/install . --region ap-northeast-1\n",
+                "chmod +x ./install\n",
+                "ssudo ./install auto\n"
               ]
             ]
           }
