--- a/deploy/dev/3-6_cloudformation_instance_parameters.template
+++ b/deploy/dev/3-6_cloudformation_instance_parameters.template
@@ -50,7 +50,7 @@
                 "sudo yum install -y jq\n",
                 "aws s3 cp s3://aws-codedeploy-ap-northeast-1/latest/install . --region ap-northeast-1\n",
                 "chmod +x ./install\n",
-                "ssudo ./install auto\n"
+                "sudo ./install auto\n"
               ]
             ]
           }
