--- a/appspec.yml
+++ b/appspec.yml
@@ -2,8 +2,8 @@ version: 0.0
 os: linux
 files:
 - source: /
-  destination: /home/ec2-user/
+  destination: /tmp/
 hooks:
 AfterInstall:
-- location: scripts/setpermission.sh
+- location: scripts/echo.sh
   timeout: 300
