--- a/deploy/dev/3-6_cloudformation_instance_parameters.template
+++ b/deploy/dev/3-6_cloudformation_instance_parameters.template
@@ -17,18 +17,18 @@
       "Type": "AWS::EC2::Instance",
       "Properties": {
         "Monitoring":"true",
-        "ImageId":"ami-c99dbeae",
         #"ImageId":"ami-c99dbeae",
-        #"BlockDeviceMappings":[
-        #  {
-        #    "DeviceName":"/dev/xvda",
-        #    "Ebs":{
-        #      "SnapshotId":"snap-025e7c85",
-        #       "VolumeSize":8,
-        #        "VolumeType":"standard"
-        #    }
-        #  }
-        #],
+        "ImageId":"ami-c99dbeae",
+        "BlockDeviceMappings":[
+          {
+            "DeviceName":"/dev/xvda",
+            "Ebs":{
+              "SnapshotId":"snap-025e7c85",
+               "VolumeSize":20,
+                "VolumeType":"standard"
+            }
+          }
+        ],
         "KeyName":"test-key1",
         "IamInstanceProfile" : "codedeploy-ec2",
         "InstanceType":"t2.micro",
