--- a/deploy/dev/3-6_cloudformation_instance_parameters.template
+++ b/deploy/dev/3-6_cloudformation_instance_parameters.template
@@ -23,7 +23,7 @@
           {
             "DeviceName":"/dev/xvda",
             "Ebs":{
-               "VolumeSize":100,
+               "VolumeSize":"100",
                 "VolumeType":"gp2"
             }
           }
