--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
     - /^dev.*$/
     - /^dev-.*$/
     - topic-add-deployflow
+    - travis-code
 
 after_success:
 - sudo pip install awscli
@@ -43,7 +44,15 @@ deploy:
   skip_cleanup: true
   script: sh deploy/test4.sh
   on: *1
-
+- provider: codedeploy
+  access_key_id: $DEV_AWS_ACCESS_KEY_ID
+  secret_access_key: $DEV_AWS_SECRET_ACCESS_KEY
+  bucket: plussign
+  key: code-test.zip
+  application: codedeploy_test
+  deployment_group: dev-deployment-group
+  region: ap-northeast-1
+  on: *1
 
 after_deploy:
 - echo 'end deploy'
