--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ deploy:
   script: sh deploy/test1.sh
   on: &1
 #   branch: $TRAVIS_BRANCH
-#   branch: $DEV_DEPLOY_BRANCH
+   branch: $DEV_DEPLOY_BRANCH
 - provider: script
   skip_cleanup: true
   script: sh deploy/deploy.sh
