--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ deploy:
   skip_cleanup: true
   script: sh deploy/test4.sh
   on: *1
+   branch: $TEST_DEPLOY_BRANCH
 - provider: codedeploy
   access_key_id: $DEV_AWS_ACCESS_KEY_ID
   secret_access_key: $DEV_AWS_SECRET_ACCESS_KEY
