--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ deploy:
   skip_cleanup: true
   script: sh deploy/deploy.sh
   on: *1
+   branch: $TEST_DEPLOY_BRANCH
 - provider: script
   skip_cleanup: true
   script: sh deploy/test3.sh
