--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ after_success:
 - echo "test"
 
 deploy:
-- provider: codedeploy
+  provider: codedeploy
   access_key_id: $DEV_AWS_ACCESS_KEY_ID
   secret_access_key: $DEV_AWS_SECRET_ACCESS_KEY
   bucket: plussign
@@ -37,7 +37,7 @@ deploy:
    branch: $DEV_DEPLOY_BRANCH
 
 after_deploy:
-- echo 'end deploy'
+- echo 'nd deploy'
 
 
 
