--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,6 @@ after_success:
 - mkdir -p /var/tmp/release
 - tar -zcf /var/tmp/release/kawabata.tar.gz --exclude ".git" ./;
 - source deploy/set_branch.sh
-- echo "test"
 
 deploy:
   provider: codedeploy
@@ -37,6 +36,7 @@ deploy:
     branch: $DEV_DEPLOY_BRANCH
 
 after_deploy:
+- echo 'end deploy'
 - echo 'end deploy'
 
 
